--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,20 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   @extend %rubik-400;
-  font-size: 20px;
-  line-height: 1.4;
+  font-size: 18px;
+  line-height: 1.3;
   color: $dark;
   background-color: $silver-100;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .container {
@@ -24,3 +35,65 @@ body {
   border-width: 0;
 }
 
+.logo {
+  margin-right: auto;
+  border-radius: 5px;
+  outline: 2px solid transparent;
+  transition: outline-color 0.4s, opacity 0.4s;
+
+  &:focus {
+    outline-color: rgba(255, 104, 56, 0.7);
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+.btn {
+  padding: 12px 32px;
+  background-color: $orange-900;
+  border-radius: 5px;
+  font-size: 14px;
+  color: $white;
+  outline: 2px solid transparent;
+  transition: color 0.4s, background-color 0.4s, outline-color 0.4s;
+
+  &:focus {
+    background-color: rgba(255, 122, 80, 0.1);
+    outline-color: rgba(255, 104, 56, 0.7);
+    color: $orange-900;
+  }
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    outline-color: rgba(255, 104, 56, 0.7);
+    color: $orange-900;
+  }
+
+  &:active {
+    background-color: rgba(255, 122, 80, 0.1);
+    color: $orange-900;
+  }
+}
+
+.link {
+  border-radius: 5px;
+  transition: color 0.4s, outline 0.4s, text-shadow 0.4s;
+
+  &:focus {
+    outline: 2px solid rgba(255, 104, 56, 0.7);
+  }
+
+  &:hover {
+    color: $orange-900;
+  }
+
+  &:active {
+    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+  }
+}
