--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,21 +1,3 @@
-.logo {
-  margin-right: auto;
-  border-radius: 5px;
-  transition: outline 0.4s, opacity 0.4s;
-
-  &:focus {
-    outline: 2px solid rgba(255, 104, 56, 0.7);
-  }
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 0.5;
-  }
-}
-
 .menu {
   display: flex;
   align-items: center;
@@ -28,24 +10,6 @@
 
   &__item:not(:last-child) {
     margin-right: 45px;
-  }
-
-  &__link {
-    font-size: 18px;
-    border-radius: 5px;
-    transition: color 0.4s, outline 0.4s, text-shadow 0.4s;
-
-    &:focus {
-      outline: 2px solid rgba(255, 104, 56, 0.7);
-    }
-
-    &:hover {
-      color: $orange-900;
-    }
-
-    &:active {
-      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-    }
   }
 
   &__link--active {
@@ -68,7 +32,8 @@
     width: 44px;
     height: 44px;
     border-radius: 5px;
-    transition: background-color 0.4s, outline 0.4s, color 0.4s;
+    outline: 2px solid transparent;
+    transition: background-color 0.4s, outline-color 0.4s, color 0.4s;
     ellipse,
     path {
       transition: stroke 0.4s;
@@ -76,7 +41,7 @@
 
     &:focus {
       background-color: rgba(255, 122, 80, 0.1);
-      outline: 2px solid rgba(255, 104, 56, 0.7);
+      outline-color: rgba(255, 104, 56, 0.7);
     }
 
     &:hover {
