--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -32,8 +32,8 @@
     width: 44px;
     height: 44px;
     border-radius: 5px;
-    outline: 2px solid transparent;
-    transition: background-color 0.4s, outline-color 0.4s, color 0.4s;
+    border: 2px solid transparent;
+    transition: background-color 0.4s, border-color 0.4s, color 0.4s;
     ellipse,
     path {
       transition: stroke 0.4s;
@@ -41,7 +41,7 @@
 
     &:focus {
       background-color: rgba(255, 122, 80, 0.1);
-      outline-color: rgba(255, 104, 56, 0.7);
+      border-color: rgba(255, 104, 56, 0.7);
     }
 
     &:hover {
