--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,7 +5,7 @@ body {
 
 body {
   @extend %rubik-400;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.3;
   color: $dark;
   background-color: $silver-100;
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -33,6 +33,16 @@ body {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+.title {
+  @extend %rubik-500;
+  font-size: 36px;
+  color: $darkBlue-900;
+}
+
+.section {
+  margin-bottom: 120px;
 }
 
 .logo {
@@ -55,10 +65,10 @@ body {
 }
 
 .btn {
-  padding: 12px 32px;
+  padding: 13px 32px;
   background-color: $orange-900;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 18px;
   color: $white;
   outline: 2px solid transparent;
   transition: color 0.4s, background-color 0.4s, outline-color 0.4s;
@@ -82,11 +92,13 @@ body {
 }
 
 .link {
+  font-size: 18px;
   border-radius: 5px;
-  transition: color 0.4s, outline 0.4s, text-shadow 0.4s;
+  border: 2px solid transparent;
+  transition: color 0.4s, border-color 0.4s, text-shadow 0.4s;
 
   &:focus {
-    outline: 2px solid rgba(255, 104, 56, 0.7);
+    border-color: rgba(255, 104, 56, 0.7);
   }
 
   &:hover {
@@ -95,5 +107,29 @@ body {
 
   &:active {
     text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+  }
+}
+
+.link-more {
+  color: $darkBlue-900;
+  line-height: 1.5;
+  border-radius: 5px;
+  border: 2px solid transparent;
+  text-decoration: solid underline 1px;
+  transition: color 0.4s, border-color 0.4s, text-shadow 0.4s, text-decoration-color 0.4s;
+
+  &:focus {
+    border-color: rgba(255, 104, 56, 0.7);
+    text-decoration-color: transparent;
+  }
+
+  &:hover {
+    color: $orange-900;
+    text-decoration-color: transparent;
+  }
+
+  &:active {
+    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    text-decoration-color: transparent;
   }
 }
