--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,11 +3,14 @@
 @import 'global';
 @import 'reset';
 
-@import 'header';
+@import 'components/header';
+@import 'components/hero';
+@import 'components/popular';
+@import 'components/burger-catalog';
 
 
 
 
-@import 'footer';
+@import 'components/footer';
 
 @import 'media';
