checked the criteria

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,6 +5,8 @@ $gray: #c2c2c2;
 $darkBlue-900: #363853;
 $dark: #31352b;
 $white: #ffffff;
+$border: rgba(255, 104, 56, 0.7);
+$focus-bg: rgba(255, 122, 80, 0.1);
 
 %rubik-300 {
   font-family: 'Rubik-Light', sans-serif;
