--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -70,23 +70,23 @@ body {
   border-radius: 5px;
   font-size: 18px;
   color: $white;
-  outline: 2px solid transparent;
-  transition: color 0.4s, background-color 0.4s, outline-color 0.4s;
+  border: 2px solid transparent;
+  transition: color 0.4s, background-color 0.4s, border-color 0.4s;
 
   &:focus {
-    background-color: rgba(255, 122, 80, 0.1);
-    outline-color: rgba(255, 104, 56, 0.7);
+    background-color: $focus-bg;
+    border-color: $border;
     color: $orange-900;
   }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    outline-color: rgba(255, 104, 56, 0.7);
+    border-color: $border;
     color: $orange-900;
   }
 
   &:active {
-    background-color: rgba(255, 122, 80, 0.1);
+    background-color: $focus-bg;
     color: $orange-900;
   }
 }
@@ -98,7 +98,7 @@ body {
   transition: color 0.4s, border-color 0.4s, text-shadow 0.4s;
 
   &:focus {
-    border-color: rgba(255, 104, 56, 0.7);
+    border-color: $border;
   }
 
   &:hover {
@@ -119,7 +119,7 @@ body {
   transition: color 0.4s, border-color 0.4s, text-shadow 0.4s, text-decoration-color 0.4s;
 
   &:focus {
-    border-color: rgba(255, 104, 56, 0.7);
+    border-color: $border;
     text-decoration-color: transparent;
   }
 
@@ -131,5 +131,63 @@ body {
   &:active {
     text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
     text-decoration-color: transparent;
+  }
+}
+
+.burger-card {
+  padding: 20px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: $white;
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid $silver-200;
+  transition: border-color 0.4s;
+
+  &:hover {
+    border-color: $orange-900;
+  }
+
+  &__photo-link {
+    border-radius: 5px;
+    border: 2px solid transparent;
+    transition: transform 0.4s, border-color 0.4s, text-shadow 0.4s;
+
+    &:focus {
+      border-color: $border;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    &:active {
+      transform: scale(0.9);
+    }
+  }
+
+  &__img {
+    display: inline-block;
+  }
+
+  &__link {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 15px;
+  }
+
+  &__price {
+    margin-bottom: 10px;
+    @extend %rubik-500;
+    font-size: 15px;
+    line-height: 1.4;
+  }
+
+  &__btn {
+    padding: 7px 14px;
+    font-size: 14px;
+    width: 100px;
+    margin: 0 auto;
   }
 }
