--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,7 +1,14 @@
 .menu {
+  position: fixed;
+  left: 0;
+  right: 0;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
   display: flex;
   align-items: center;
   padding: 60px 0;
+  background-color: $silver-100;
 
   &__list {
     display: flex;
