--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -136,11 +136,11 @@ body {
 
 .burger-card {
   padding: 20px 15px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: $white;
-  text-align: center;
   border-radius: 5px;
   border: 1px solid $silver-200;
   transition: border-color 0.4s;
@@ -187,7 +187,6 @@ body {
   &__btn {
     padding: 7px 14px;
     font-size: 14px;
-    width: 100px;
     margin: 0 auto;
   }
 }
