--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,29 +1,29 @@
 @font-face {
-  font-family: 'Rubik-Light';
-  src: local('Rubik-Light'),
-  url('../fonts/Rubik-Light.woff2') format('woff2'),
-  url('../fonts/Rubik-Light.woff') format('woff');
+  font-family: 'Rubik';
+  src:
+    url('../fonts/Rubik-Light.woff2') format('woff2'),
+    url('../fonts/Rubik-Light.woff') format('woff');
   font-weight: 300;
-  font-style: normal;
   font-display: swap;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Rubik-Regular';
-  src: local('Rubik-Regular'),
-  url('../fonts/Rubik-Regular.woff2') format('woff2'),
-  url('../fonts/Rubik-Regular.woff') format('woff');
+  font-family: 'Rubik';
+  src:
+    url('../fonts/Rubik-Regular.woff2') format('woff2'),
+    url('../fonts/Rubik-Regular.woff') format('woff');
   font-weight: 400;
-  font-style: normal;
   font-display: swap;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Rubik-Medium';
-  src: local('Rubik-Medium'),
-  url('../fonts/Rubik-Medium.woff2') format('woff2'),
-  url('../fonts/Rubik-Medium.woff') format('woff');
+  font-family: 'Rubik';
+  src:
+    url('../fonts/Rubik-Medium.woff2') format('woff2'),
+    url('../fonts/Rubik-Medium.woff') format('woff');
   font-weight: 500;
-  font-style: normal;
   font-display: swap;
+  font-style: normal;
 }
