--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,7 +4,8 @@ body {
 }
 
 body {
-  @extend %rubik-400;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
   font-size: 20px;
   line-height: 1.3;
   color: $dark;
@@ -36,17 +37,16 @@ body {
 }
 
 .title {
-  @extend %rubik-500;
+  font-weight: 500;
   font-size: 36px;
   color: $darkBlue-900;
 }
 
 .section {
-  margin-bottom: 120px;
+  padding-bottom: 120px;
 }
 
 .logo {
-  margin-right: auto;
   border-radius: 5px;
   outline: 2px solid transparent;
   transition: outline-color 0.4s, opacity 0.4s;
@@ -65,29 +65,34 @@ body {
 }
 
 .btn {
-  padding: 13px 32px;
-  background-color: $orange-900;
+  padding: 7px 14px;
+  font-size: 14px;
+  background-color: $accent;
+  color: $lite;
   border-radius: 5px;
-  font-size: 18px;
-  color: $white;
   border: 2px solid transparent;
   transition: color 0.4s, background-color 0.4s, border-color 0.4s;
 
   &:focus {
-    background-color: $focus-bg;
-    border-color: $border;
-    color: $orange-900;
+    background-color: $bg-01;
+    border-color: $accent-07;
+    color: $accent;
   }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    border-color: $border;
-    color: $orange-900;
+    border-color: $accent-07;
+    color: $accent;
   }
 
   &:active {
-    background-color: $focus-bg;
-    color: $orange-900;
+    background-color: $bg-01;
+    color: $accent;
+  }
+
+  &--big {
+    font-size: 18px;
+    padding: 13px 32px;
   }
 }
 
@@ -98,64 +103,54 @@ body {
   transition: color 0.4s, border-color 0.4s, text-shadow 0.4s;
 
   &:focus {
-    border-color: $border;
+    border-color: $accent-07;
   }
 
   &:hover {
-    color: $orange-900;
+    color: $accent;
   }
 
   &:active {
     text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
   }
-}
 
-.link-more {
-  color: $darkBlue-900;
-  line-height: 1.5;
-  border-radius: 5px;
-  border: 2px solid transparent;
-  text-decoration: solid underline 1px;
-  transition: color 0.4s, border-color 0.4s, text-shadow 0.4s, text-decoration-color 0.4s;
+  &--more {
+    font-size: 20px;
+    line-height: 1.5;
+    color: $darkBlue-900;
+    text-decoration: solid underline 1px;
+    transition: text-decoration-color 0.4s;
 
-  &:focus {
-    border-color: $border;
-    text-decoration-color: transparent;
-  }
-
-  &:hover {
-    color: $orange-900;
-    text-decoration-color: transparent;
-  }
-
-  &:active {
-    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-    text-decoration-color: transparent;
+    &:focus,
+    &:hover,
+    &:active {
+      text-decoration-color: transparent;
+    }
   }
 }
 
-.burger-card {
+.product-card {
   padding: 20px 15px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: $white;
+  background-color: $lite;
   border-radius: 5px;
   border: 1px solid $silver-200;
   transition: border-color 0.4s;
 
   &:hover {
-    border-color: $orange-900;
+    border-color: $accent;
   }
 
-  &__photo-link {
+  &__link {
     border-radius: 5px;
     border: 2px solid transparent;
     transition: transform 0.4s, border-color 0.4s, text-shadow 0.4s;
 
     &:focus {
-      border-color: $border;
+      border-color: $accent-07;
     }
 
     &:hover {
@@ -168,10 +163,10 @@ body {
   }
 
   &__img {
-    display: inline-block;
+    margin: 0 auto;
   }
 
-  &__link {
+  &__title {
     display: block;
     margin-bottom: 10px;
     font-size: 15px;
@@ -179,14 +174,12 @@ body {
 
   &__price {
     margin-bottom: 10px;
-    @extend %rubik-500;
+    font-weight: 500;
     font-size: 15px;
     line-height: 1.4;
   }
 
   &__btn {
-    padding: 7px 14px;
-    font-size: 14px;
     margin: 0 auto;
   }
 }
