--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,24 +1,9 @@
-$orange-900: #ff6838;
+$accent: #ff6838;
 $silver-100: #f9faff;
 $silver-200: #ececec;
 $gray: #c2c2c2;
 $darkBlue-900: #363853;
 $dark: #31352b;
-$white: #ffffff;
-$border: rgba(255, 104, 56, 0.7);
-$focus-bg: rgba(255, 122, 80, 0.1);
-
-%rubik-300 {
-  font-family: 'Rubik-Light', sans-serif;
-  font-weight: 300;
-}
-
-%rubik-400 {
-  font-family: 'Rubik-Regular', sans-serif;
-  font-weight: 400;
-}
-
-%rubik-500 {
-  font-family: 'Rubik-Medium', sans-serif;
-  font-weight: 500;
-}
+$lite: #ffffff;
+$accent-07: rgba($accent, 0.7);
+$bg-01: rgba(255, 122, 80, 0.1);
