--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -17,14 +17,14 @@
   &__title {
     font-size: 66px;
     color: $darkBlue-900;
-    @extend %rubik-500;
+    font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 20px;
   }
 
   &__subtitle {
     display: block;
-    color: $orange-900;
+    color: $accent;
   }
 
   &__text {
@@ -33,8 +33,11 @@
     line-height: 1.5;
   }
 
-  &__btn {
-    margin-right: 25px;
+  &__link {
+    display: inline-block;
+    &:not(:last-child) {
+      margin-right: 25px;
+    }
   }
 
 }
