--- a/app/scss/components/_popular.scss
+++ b/app/scss/components/_popular.scss
@@ -27,7 +27,9 @@
     border: 2px solid transparent;
     transition: color 0.4s, background-color 0.4s, border-color 0.4s, box-shadow 0.4s;
 
-    path {
+    & .icon {
+      width: 44px;
+      height: 44px;
       fill: $darkBlue-900;
       transition: fill 0.4s;
     }
@@ -40,7 +42,7 @@
       color: $accent;
       background-color: rgba(255, 104, 56, 0.1);
 
-      path {
+      .icon {
         fill: $accent;
       }
     }
@@ -53,7 +55,7 @@
     background-color: $accent;
     color: $lite;
 
-    path {
+    .icon {
       fill: $lite;
     }
   }
