--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,37 +1,43 @@
 .header {
-  position: fixed;
-  left: 0;
-  right: 0;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 60px 15px;
-  display: flex;
-  align-items: center;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    bottom: 0;
-    width: 100vw;
-    transform: translateX(-50%);
-    background-color: transparent;
-    z-index: -1;
-    transition: background-color 0.4s;
-  }
+  &__container {
+    position: fixed;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
 
-  &--scrolled {
     &::before {
-      background-color: $silver-100;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      bottom: 0;
+      width: 100vw;
+      transform: translateX(-50%);
+      background-color: transparent;
+      z-index: -1;
+      transition: background-color 0.4s;
+    }
+  
+    &--scrolled {
+      &::before {
+        background-color: $silver-100;
+      }
     }
   }
+
 }
 
 .menu {
-  margin-left: auto;
+  display: flex;
+  align-items: center;
+  padding: 60px 0;
+  width: 100%;
+  
   &__list {
     display: flex;
+    margin-left: auto;
     margin-right: 50px;
   }
 
@@ -57,14 +63,14 @@
     }
   }
 
-  & .icon {
+  .user-nav__icon {
     stroke-width: 1.5px;
     fill: transparent;
     stroke: $darkBlue-900;
     transition: stroke 0.4s;
   }
 
-  &__link {
+  &__btn {
     position: relative;
     display: flex;
     justify-content: center;
@@ -83,7 +89,7 @@
     &:hover {
       background-color: #ff7a50;
 
-      .icon {
+      .user-nav__icon {
         stroke: $lite;
       }
 
