--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -63,7 +63,7 @@
       <address class="footer__contacts">
         <ul class="footer__contacts-list">
           <li class="footer__contacts-item">
-            <span class="footer__contacts-span">
+            <span class="footer__contacts-location">
               <svg class="footer__contacts-icon" width="24" height="24">
                 <use href="images/sprite.svg#icon-location"></use>
               </svg>
