--- a/app/html/components/_hero.html
+++ b/app/html/components/_hero.html
@@ -10,7 +10,7 @@
           Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш рахунок
         </p>
         <a class="hero__link btn btn--big" href="#">Замовити</a>
-        <a class="hero__link link-more" href="#">Детальніше</a>
+        <a class="hero__link show-more" href="#">Детальніше</a>
       </div>
     </div>
   </div>
