--- a/app/html/components/_popular.html
+++ b/app/html/components/_popular.html
@@ -209,6 +209,6 @@
       </li>
     </ul>
 
-    <a class="popular__link link-more " href="#">Показати ще</a>
+    <a class="popular__link show-more" href="#">Показати ще</a>
   </div>
 </section>
