--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -94,7 +94,7 @@ body {
     font-size: 18px;
     padding: 13px 32px;
   }
-}
+} 
 
 .link {
   font-size: 18px;
@@ -115,7 +115,7 @@ body {
   }
 }
 
-.link-more {
+.show-more {
   font-size: 20px;
   line-height: 1.5;
   color: $darkBlue-900;
