--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,16 @@
 @import 'fonts';
+@import 'libs';
 @import 'reset';
 @import 'vars';
 @import 'global';
 
 @import 'components/header';
+
 @import 'components/hero';
 @import 'components/popular';
-
-
-
+@import 'components/features';
+@import 'components/restorant';
+@import 'components/testimonials';
+@import 'components/app';
 
 @import 'components/footer';
