--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 92%;
+  width: calc(100% - 98px);
 
   &__list {
     display: flex;
@@ -70,6 +70,32 @@
     transition: stroke 0.4s;
   }
 
+  &__search {
+    position: relative;
+    display: flex;
+    height: 44px;
+
+    &.active {
+      .user-nav__search-input {
+        width: 200px;
+        outline-color: $accent;
+      }
+      // .user-nav__btn--search {
+      //   transform: translateX(156px);
+      // }
+    }
+  }
+
+  &__search-input {
+    width: 44px;
+    height: 100%;
+    padding: 10px 10px 10px 54px;
+    font-size: 14px;
+    outline: 1px solid transparent;
+    border-radius: 5px;
+    transition: width 0.4s, outline-color 0.4s;
+  }
+
   &__btn {
     position: relative;
     display: flex;
@@ -78,6 +104,7 @@
     width: 44px;
     height: 44px;
     border-radius: 5px;
+    background-color: $silver-100;
     border: 2px solid transparent;
     transition: background-color 0.4s, border-color 0.4s, color 0.4s;
 
@@ -101,6 +128,11 @@
 
     &:active {
       background-color: $bg-01;
+    }
+
+    &--search {
+      position: absolute;
+      // transition: transform 0.4s;
     }
   }
 
