--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,3 +7,8 @@ $dark: #31352b;
 $lite: #ffffff;
 $accent-07: rgba($accent, 0.7);
 $bg-01: rgba(255, 122, 80, 0.1);
+
+$sm: 576;
+$md: 768;
+$lg: 992;
+$xl: 1200;
