--- a/app/scss/lego/_mobile-menu.scss
+++ b/app/scss/lego/_mobile-menu.scss
@@ -15,11 +15,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 15px;
+    padding: 25px 13px 25px 15px;
     border-bottom: 1px solid #eeeff3;
     @media (max-width: 992px) and (orientation: landscape) {
       padding: 10px 15px;
     }
+  }
+
+  &__btn {
+    height: 44px;
+    width: 44px;
   }
 
   &__list {
