--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -109,17 +109,17 @@ body {
   transition:
     color 0.4s,
     background-color 0.4s,
-    border-color 0.4s;
+    box-shadow 0.4s;
 
   &:focus {
     background-color: $bg-01;
-    border-color: $accent-07;
+    box-shadow: 0 0 0 2px rgba($accent, 0.70);
     color: $accent;
   }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    border-color: $accent-07;
+    box-shadow: 0 0 0 2px rgba($accent, 0.7), 0 5px 12px 0 rgba($accent, 0.2);
     color: $accent;
   }
 
@@ -149,7 +149,7 @@ body {
     text-shadow 0.4s;
 
   &:focus {
-    border-color: $accent-07;
+    border-color: rgba($accent, 0.7);
   }
 
   &:hover {
@@ -167,7 +167,8 @@ body {
   color: $darkBlue-900;
   border-radius: 5px;
   border: 2px solid transparent;
-  text-decoration: underline solid 1px;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
   transition:
     text-decoration-color 0.4s,
     color 0.4s,
@@ -175,7 +176,7 @@ body {
     text-shadow 0.4s;
 
   &:focus {
-    border-color: $accent-07;
+    border-color: rgba($accent, 0.7);
     text-decoration-color: transparent;
   }
 
@@ -223,7 +224,7 @@ body {
       text-shadow 0.4s;
 
     &:focus {
-      border-color: $accent-07;
+      border-color: rgba($accent, 0.7);
     }
 
     &:hover {
@@ -290,7 +291,7 @@ body {
       background-color 0.4s;
 
     &:focus {
-      outline-color: $accent-07;
+      outline-color: rgba($accent, 0.7);
       background-color: #fff2ed;
 
       .restaurant-card__link-icon {
@@ -300,7 +301,7 @@ body {
 
     &:hover {
       background-color: $lite;
-      outline-color: $accent-07;
+      outline-color: rgba($accent, 0.7);
 
       .restaurant-card__link-icon {
         fill: $accent;
