--- a/app/scss/lego/_breadcrumbs.scss
+++ b/app/scss/lego/_breadcrumbs.scss
@@ -7,25 +7,39 @@
   @include r($sm) {
     padding-top: 94px;
   }
-  @media (max-width: 992px) and (orientation: landscape) {
+  @media (max-width: 1024px) and (orientation: landscape) {
     padding-top: 94px;
+  }
+
+  &__container {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 164px;
+      left: 50%;
+      height: 66px;
+      width: 100vw;
+      transform: translateX(-51%);
+      background-color: rgba(255, 104, 56, 0.1);
+      z-index: -1;
+      @include r($lg) {
+        top: 134px;
+      }
+      @include r($sm) {
+        top: 94px;
+      }
+      @media (max-width: 1024px) and (orientation: landscape) {
+        top: 94px;
+      }
+    }
   }
 
   &__list {
     display: flex;
     padding: 24px 0;
     position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 49%;
-      bottom: 0;
-      width: 100vw;
-      transform: translateX(-50%);
-      background-color: rgba(255, 104, 56, 0.1);
-      z-index: -1;
+    @include r($sm) {
+      overflow-x: scroll;
     }
   }
 
@@ -51,9 +65,11 @@
   }
 
   &__link {
+    padding: 12px 0;
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.42px;
     color: #505050;
+    white-space: nowrap;
   }
 }
