--- a/app/scss/lego/_header.scss
+++ b/app/scss/lego/_header.scss
@@ -19,7 +19,7 @@
         width: 110px;
       }
     }
-    @media (max-width: 992px) and (orientation: landscape) {
+    @media (max-width: 1024px) and (orientation: landscape) {
       padding: 25px 15px;
       .logo {
         width: 110px;
@@ -156,7 +156,7 @@
 
     &:focus {
       background-color: $bg-01;
-      border-color: $accent-07;
+      border-color: rgba($accent, 0.7);
     }
 
     &:hover {
