--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -113,13 +113,15 @@ body {
 
   &:focus {
     background-color: $bg-01;
-    box-shadow: 0 0 0 2px rgba($accent, 0.70);
+    box-shadow: 0 0 0 2px rgba($accent, 0.7);
     color: $accent;
   }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 0 2px rgba($accent, 0.7), 0 5px 12px 0 rgba($accent, 0.2);
+    box-shadow:
+      0 0 0 2px rgba($accent, 0.7),
+      0 5px 12px 0 rgba($accent, 0.2);
     color: $accent;
   }
 
@@ -162,6 +164,7 @@ body {
 }
 
 .show-more {
+  padding: 9px 0;
   font-size: 20px;
   line-height: 1.5;
   color: $darkBlue-900;
