--- a/app/scss/pages/_popular.scss
+++ b/app/scss/pages/_popular.scss
@@ -38,7 +38,8 @@
     align-items: center;
     gap: 10px;
     padding: 13px 32px;
-    width: max-content;
+    // width: max-content;
+    white-space: nowrap;
     background-color: $lite;
     border-radius: 5px;
     box-shadow: 0 0 0 1px $silver-200;
@@ -105,7 +106,6 @@
       grid-template-columns: repeat(2, 1fr);
       margin-bottom: 30px;
     }
-    
   }
 
   &__link {
@@ -114,4 +114,3 @@
     }
   }
 }
-
