--- a/app/scss/pages/_product.scss
+++ b/app/scss/pages/_product.scss
@@ -150,21 +150,20 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        @include recolor($lite);
       }
     }
     &__spin.minus {
       left: 0;
       border-radius: 3px 0 0 3px;
       &::before {
-        background-image: url("../images/sprite.svg#icon-minus");
+        background-image: url("../images/icon-minus.svg");
       }
     }
     &__spin.plus {
       right: 0;
       border-radius: 0 3px 3px 0;
       &::before {
-        background-image: url("../images/sprite.svg#icon-plus");
+        background-image: url("../images/icon-plus.svg");
       }
     }
   }
